--- a/tensorflow/compiler/xla/service/gpu/BUILD
+++ b/tensorflow/compiler/xla/service/gpu/BUILD
@@ -1688,7 +1688,7 @@ cc_library(
         "//tensorflow/compiler/xla/service:hlo_proto_util",
         "//tensorflow/compiler/xla/service:hlo_subcomputation_unification",
         "//tensorflow/compiler/xla/service:hlo_verifier",
-        "//tensorflow/compiler/xla/service:intermediate_tensor_splitter",
+        "//tensorflow/compiler/xla/service:tensor_splitter",
         "//tensorflow/compiler/xla/service:broadcast_simplifier",
         "//tensorflow/compiler/xla/service:rce_optimizer",
         "//tensorflow/compiler/xla/service:algebraic_rewriter",
